30 January 2008
+ Creating unique index on comment_users (needed in update)
+ Fixed: Posting user infomration without avatar. Requires file
  cabinet upgrade.

Version 0.6.4 - 25 July 2007
-------------------------------------------------------------------
8 June 2007
+ Updated locale file.

1 June 2007
+ RFE #1720589 - Added ability to show most recent comments in a popup.
+ Added permission check on single comment view.
+ Updated files: templates/settings_form.tpl, templates/recent.tpl

Version 0.6.3
-------------------------------------------------------------------
+ Added setAnchor to comments. Needs newest version of DBPager.
+ Changed anchor tag to conform with Safari.

Version 0.6.2
-------------------------------------------------------------------
+ Fixed bug with ordering comments by age.

Version 0.6.1
-------------------------------------------------------------------
+ Added comments anchor.
+ Changed numbering method for translation.

Version 0.6.0
-------------------------------------------------------------------
4 April 2007
+ Updated language functions.

5 March 2007
+ Changed control panel icon

Version 0.5.1
--------------------------------------------------------------------
19 February 2007
+ Reduced translate functions.

15 February 2007
+ Added translate functions
+ Removed reference constructors
+ Added anonymous name tag for identification
+ Added forbidden names.
+ Updated files: conf/forbidden.php, conf/config.php

30 January 2007
+ Fixed isPosted check to prevent extra posts

Version 0.5.0
--------------------------------------------------------------------
27 November 2006
+ Updated templates templates/view.tpl, templates/alt_view.tpl
+ Added anchor tag to templates and code.
+ Changed the getSourceUrl function in the Thread to use the DBPager's
  new saveLastView and getLastView functions.
+ Update dependent on new core.

Version 0.4.0
--------------------------------------------------------------------
13 November 2006