@@ -1,0 +1,7 @@
+<script type="text/javascript">
+//<![CDATA[
+function report_comment(id) {
+    alert(id);
+}
+//]]>
+</script>
