@@ -18,7 +18,7 @@
             <div class="admin-links"><!-- BEGIN edit-link -->{EDIT_LINK}
                 <!-- BEGIN delete-link -->| {DELETE_LINK}<!-- END delete-link -->
                 | <!-- END edit-link -->
-                <!-- BEGIN post -->{REPLY_LINK} | {QUOTE_LINK}<!-- END post -->
+                <!-- BEGIN post -->{REPLY_LINK} | {QUOTE_LINK} | {REPORT_LINK}<!-- END post -->
             </div>
         </td>
     </tr>
